<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/silver"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical"
    tools:context=".ActivityMain" >

    <EditText
        android:id="@+id/queryStringEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_query_string"
        android:padding="5dip"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="2"
        tools:context=".ActivityMain" >
        <Button
            android:id="@+id/query_manufacturer_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/btn_text_manufacturer" />

        <Button
            android:id="@+id/query_type_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/btn_text_type" />
    </LinearLayout>

    <ListView
        android:id="@+id/car_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>